Adding an endpoint to reindex all samples
